# Math-Exercises-Math-Problems

./: README.md
MathExercises/: CMakeLists.txt  main.cpp
MathExercises/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MathExercises  build.ninja  cmake_install.cmake  qtcsettings.cmake
MathExercises/Debug/.cmake/api/v1/reply/: cache-v2-0b070b21ee7971bf5aba.json  cache-v2-6f8cff826125e8162958.json  cmakeFiles-v1-bf5808fd4198e9635720.json  cmakeFiles-v1-fac21215ed52d0c4bd27.json  codemodel-v2-75413042b8fdf02be825.json  codemodel-v2-e6cdf93b287cea15835e.json  directory-.-Debug-f3a1113308e1bf30fec6.json  index-2022-08-20T01-52-17-0525.json  index-2022-08-20T03-02-53-0952.json  target-MathExercises-Debug-29a14d8bffe61e58041d.json
MathExercises/Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-b48dfa6936d1e305d26c.json  codemodel-v2-59ef99f2e785da9207a4.json  index-2022-08-20T02-54-25-0700.json  target-MathExercises-Debug-d5e0b07512ad681c5d58.json
MathExercises/Debug/.qtc_clangd/: compile_commands.json
MathExercises/Debug/.qtc_clangd/.cache/clangd/index/: AlignedBox.h.5A0BB4AEC7863A62.idx  AngleAxis.h.E1D59C16BCEB7D9A.idx  ArithmeticSequence.h.4FEE27828B82E609.idx  Array.h.3CB626187E933DA9.idx  ArrayBase.h.27D1C33E9BDDD4AC.idx  ArrayCwiseBinaryOps.h.884BE1A71CB162FA.idx  ArrayCwiseUnaryOps.h.80265465E29BAEEA.idx  ArrayWrapper.h.77A91A9F68F9B322.idx  Assign.h.98FAE1A289E3B0B6.idx  AssignEvaluator.h.011EEB79C71C67D1.idx  AssignmentFunctors.h.7EB1E0FFDA44221B.idx  BDCSVD.h.EB1AC3598108AAB6.idx  BFloat16.h.1CB01BA57D4006D5.idx  BandMatrix.h.1BF55B0B952E28FA.idx  (+221 more)
